<resources>
    <string name="app_name">WeatherUIDemo</string>
    <string name="location_name">San Francisco</string>
    <string name="weatherInfo">It\'s hot</string>
    <string name="dot">●</string>
    <string name="leafInfo">193</string>
    <string name="dayInfo">Wednesday, 10 Feb</string>
    <string name="weatherDetail">Rain Showers</string>
    <string name="celcius">\u002029°</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="clock_four">04:00</string>
    <string name="celcius_data_first">\u002022°</string>
    <string name="clock_six">06:00</string>
    <string name="celcius_data_second">\u002023°</string>
    <string name="clock_eight">08:00</string>
    <string name="celcius_data_third">\u002026°</string>
    <string name="clock_ten">10:00</string>
    <string name="celcius_data_fourth">\u002025°</string>
</resources>