<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mine_shaft"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/viewIndicatorLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:paddingTop="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/locationName2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nexa_light"
            android:text="@string/dot"
            android:paddingHorizontal="2dp"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </TextView>

        <TextView
            android:id="@+id/locationName3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nexa_light"
            android:text="@string/dot"
            android:paddingHorizontal="2dp"
            android:textColor="@color/tundora"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </TextView>

        <TextView
            android:id="@+id/locationName4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nexa_light"
            android:text="@string/dot"
            android:paddingHorizontal="2dp"
            android:textColor="@color/tundora"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </TextView>

    </LinearLayout>

    <TextView
        android:id="@+id/locationName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location_name"
        android:fontFamily="@font/nexa_light"
        android:textSize="22sp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="14dp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/viewIndicatorLayout"
        app:layout_constraintStart_toStartOf="parent">

    </TextView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="11dp"
        android:background="@drawable/rounded_bg"
        android:backgroundTint="@color/mine_shaft_apprx"
        android:orientation="horizontal"
        android:layout_marginEnd="24dp"
        app:layout_constraintTop_toBottomOf="@id/locationName"
        app:layout_constraintBottom_toBottomOf="@id/locationName"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/leaf"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/white">

        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leafInfo"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/nexa_light"
            android:textSize="14sp"
            android:textColor="@color/white">

        </TextView>

    </LinearLayout>

    <TextView
        android:id="@+id/dayInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dayInfo"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/nexa_light"
        android:textColor="@color/boulder_solid"
        app:layout_constraintStart_toStartOf="@+id/locationName"
        app:layout_constraintTop_toBottomOf="@+id/locationName">

    </TextView>

    <LinearLayout
        android:id="@+id/weatherInfoLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_gradient"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="24dp"
        android:padding="16dp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/locationName">

        <TextView
            android:id="@+id/clockInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nexa_light"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/weatherDetail"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold">

        </TextView>

        <TextView
            android:id="@+id/celcius"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nexa_bold"
            android:text="@string/celcius"
            android:textColor="@color/white"
            android:layout_marginBottom="45dp"
            android:textSize="100sp">

        </TextView>

    </LinearLayout>

    <TextView
        android:id="@+id/cloudyDay"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:background="@drawable/cloudy_day_big"
        app:layout_constraintTop_toBottomOf="@+id/weatherInfoLayout"
        app:layout_constraintBottom_toBottomOf="@id/weatherInfoLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

    </TextView>

    <TextView
        android:id="@+id/todayInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nexa_light"
        android:gravity="center"
        android:text="@string/today"
        android:layout_marginTop="20dp"
        android:layout_marginStart="24dp"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cloudyDay">

    </TextView>

    <TextView
        android:id="@+id/selectedDayDot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nexa_light"
        android:text="@string/dot"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/todayInfo"
        app:layout_constraintTop_toBottomOf="@id/todayInfo"
        app:layout_constraintEnd_toEndOf="@id/todayInfo">

    </TextView>

    <TextView
        android:id="@+id/tomorrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nexa_light"
        android:text="@string/tomorrow"
        android:layout_marginStart="30dp"
        android:textColor="@color/boulder_solid"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/todayInfo"
        app:layout_constraintTop_toTopOf="@+id/todayInfo"
        app:layout_constraintBottom_toBottomOf="@id/todayInfo">

    </TextView>

    <LinearLayout
        android:id="@+id/dayOfHourWeatherInfoLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_bg"
        android:backgroundTint="@color/mine_shaft_apprx"
        android:orientation="vertical"
        android:padding="15dp"
        android:layout_marginStart="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/dayOfHourWeatherInfoLayout2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/todayInfo">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/nexa_light"
            android:gravity="center"
            android:text="@string/clock_four"
            android:textColor="@color/boulder_solid"
            android:textSize="16sp">

        </TextView>

        <TextView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:background="@drawable/moon">

        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/nexa_light"
            android:text="@string/celcius_data_first"
            android:textColor="@color/white"
            android:textSize="20sp">

        </TextView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/dayOfHourWeatherInfoLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:background="@drawable/bg_gradient"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/todayInfo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/dayOfHourWeatherInfoLayout"
        app:layout_constraintEnd_toEndOf="@id/dayOfHourWeatherInfoLayout3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clock_six"
            android:gravity="center"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/nexa_light"
            android:textSize="16sp"
            android:textColor="@color/white">

        </TextView>

        <TextView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:background="@drawable/cloudy_day_small">

        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/celcius_data_second"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/nexa_light"
            android:textSize="20sp"
            android:textColor="@color/white">

        </TextView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/dayOfHourWeatherInfoLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:background="@drawable/rounded_bg"
        android:backgroundTint="@color/mine_shaft_apprx"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/todayInfo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/dayOfHourWeatherInfoLayout2"
        app:layout_constraintEnd_toStartOf="@id/dayOfHourWeatherInfoLayout4">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clock_eight"
            android:gravity="center"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/nexa_light"
            android:textSize="16sp"
            android:textColor="@color/boulder_solid">

        </TextView>

        <TextView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:background="@drawable/sun">

        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/celcius_data_third"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/nexa_light"
            android:textSize="20sp"
            android:textColor="@color/white">

        </TextView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/dayOfHourWeatherInfoLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_bg"
        android:backgroundTint="@color/mine_shaft_apprx"
        android:orientation="vertical"
        android:padding="15dp"
        android:layout_marginEnd="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/dayOfHourWeatherInfoLayout3"
        app:layout_constraintTop_toBottomOf="@id/todayInfo">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/nexa_light"
            android:gravity="center"
            android:text="@string/clock_ten"
            android:textColor="@color/boulder_solid"
            android:textSize="16sp">

        </TextView>

        <TextView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:background="@drawable/cloudy_day_small">

        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/nexa_light"
            android:text="@string/celcius_data_fourth"
            android:textColor="@color/white"
            android:textSize="20sp">

        </TextView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>